--- a/release/title.html
+++ b/release/title.html
@@ -71,28 +71,21 @@ information needs to cascade to all the view representations.</p>
 <p>Often this leads to a tight coupling of persistence and presentation: invoking
 <code class="literal">$.ajax</code> to save a user’s update and then updating several specific DOM elements
 upon success.</p>
-<p>Perhaps you’ve seen code like this:</p>
-<pre class="programlisting">TODO: Contact app example, $.ajax nested a few layers deep, updating hidden DOM
-elements or a global object e.g. <b class="hl-string"><i style="color:red">"window.contactsJSON"</i></b> as persistence, then
-cascading update to several views</pre>
-<p>What if it could look like this instead:</p>
-<pre class="programlisting">TODO: Backbone refactoring of above example.</pre>
 <p>By separating business logic, persistence, and presentation concerns, and
 providing a decoupled, event-driven way to cascade changes through a system of
 observers, each module of code is more well-encapsulated and expresses a
 cohesive set of responsibilities without being coupled to outside concerns.
-Your application code becomes easier to test, modify, and extend, and your
-application can manage its complexity while its feature set grows.</p>
-<p>It’s important to note that Backbone is a library, not a framework.  Though the
-distinction may seem subtle, it’s largely one of intent and purpose.  If you’re
-coming from a Rails background, you understand that a large part of Rails' value
-is expressing and implementing highly-opinionated conventions that guide
-development decisions.  Backbone doesn’t do this - conventions for rich
-client-side applications aren’t as well set-down and individual use cases vary
-more widely.  Instead of trying to serve as "the one way" or an opinionated
-framework like Rails, Backbone provides a set of structures that help you
-organize your application by building your own framework with its own set of
-conventions.</p>
+Your application code becomes easier to test, modify, and extend, and you
+can better manage its complexity while its feature set grows.</p>
+<p>It’s important to note that Backbone is a library, not a framework.  If you’re
+coming from a Rails background, you understand that a large part of Rails'
+value is expressing and implementing highly-opinionated conventions that guide
+development decisions.  Backbone doesn’t do this.  Instead of trying to serve
+as "the one way" or an opinionated framework like Rails, Backbone provides a
+set of structures that help you organize your application by building your own
+framework with its own set of conventions.</p>
+<p>Next, we’ll take a look at a handful of alternatives to Backbone, and then get
+down to business.</p>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_why_use_backbone_js"></a>Why use Backbone.js</h3></div></div></div>
@@ -107,14 +100,20 @@ conventions.</p>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_the_example_application"></a>The Example Application</h3></div></div></div>
-<p>Rails 3.1.0.rc5</p>
-<p>Ruby 1.9.2</p>
+<p>The example application is a classic todo item manager.  While this is a
+popular example, it is so for a reason: the concepts and domain are familiar,
+while leaving room for exploring interesting implementations like deferred
+loading and file attachment.</p>
+<p>The application uses Rails 3.1.0 and Ruby 1.9.3.  We provide an .rvmrc.</p>
 <p>Backbone.js and Underscore.js are the non-minified versions. This is for
 informational purposes, but also because the Rails 3.1 asset pipeline will
 compress and minify them.</p>
 <p>While Rails 3.1 defaults to CoffeeScript, we have decided to make all of the
-example code normal Javascript as we believe that will be the most understandable to
-the current readers.</p>
+example code normal Javascript as we believe that will be the most
+understandable to the current readers.</p>
+<p>The example application comes with a full test suite.  The README in the
+<code class="literal">example_app</code> root directory has instructions for bootstrapping the app and
+running all the tests.</p>
 </div>
 </div>
     </div>
